Created page with "To znamená, že objekt bude skrytý ve stromovém zobrazení, pokud není zaškrtnuta možnost kontextového menu {{MenuCommand|Zobrazit položky skryté ve stromovém zobrazení}} objektů nebo dokumentu. Ovlivněny jsou objekty, u kterých je vlastnost {{PropertyView|Zobrazit ve stromu}} nastavena na {{FALSE}}. Tuto vlastnost lze změnit v [[Property_View|Zobrazení vlastností]] nebo pomocí kontextového menu objektů {{MenuCommand|Přepnout viditelnost ve stromové..."

--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -105,7 +105,7 @@
 </p><p><span id="File:FreeCAD_Tree_view_hidden.png_Eye_symbol"></span>
 </p>
 <h3><span class="mw-headline" id="Symbol_oka"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_hidden.png&amp;filetimestamp=20240413200716&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_hidden.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Symbol oka</span></h3>
-<p>This indicates that the object will be hidden in the Tree View if the <b>Show Items Hidden in Tree View</b> context menu option of objects or the document is unchecked. Objects that have their <span style="font-size:60%; padding-right:0.8em;">Pohled</span><b>Show In Tree</b> property set to <code>false</code> are affected. This property can be changed in the <a href="../Property_View.html" title="Property View">Property View</a> or with the <b>Toggle Visibility in Tree View</b> context menu option of objects.
+<p>To znamen&aacute;, &#382;e objekt bude skryt&yacute; ve stromov&eacute;m zobrazen&iacute;, pokud nen&iacute; za&scaron;krtnuta mo&#382;nost kontextov&eacute;ho menu <b>Zobrazit polo&#382;ky skryt&eacute; ve stromov&eacute;m zobrazen&iacute;</b> objekt&#367; nebo dokumentu. Ovlivn&#283;ny jsou objekty, u kter&yacute;ch je vlastnost <span style="font-size:60%; padding-right:0.8em;">Pohled</span><b>Zobrazit ve stromu</b> nastavena na <code>false</code>. Tuto vlastnost lze zm&#283;nit v <a href="../Property_View.html" title="Property View">Zobrazen&iacute; vlastnost&iacute;</a> nebo pomoc&iacute; kontextov&eacute;ho menu objekt&#367; <b>P&#345;epnout viditelnost ve stromov&eacute;m zobrazen&iacute;</b>.
 </p>
 <h3><span class="mw-headline" id="Cyan_ice_crystal"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_frozen.png&amp;filetimestamp=20240413201638&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_frozen.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Cyan ice crystal</span></h3>
 <p><span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
@@ -175,15 +175,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122194414
+Cached time: 20260122194709
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.133 seconds
-Real time usage: 0.214 seconds
+CPU time usage: 0.108 seconds
+Real time usage: 0.175 seconds
 Preprocessor visited node count: 766/1000000
-Post&#8208;expand include size: 37999/2097152 bytes
-Template argument size: 12206/2097152 bytes
+Post&#8208;expand include size: 38047/2097152 bytes
+Template argument size: 12254/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -191,19 +191,19 @@ Unstrip post&#8208;expand size: 2393/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.986      1 -total
- 24.30%   10.687      1 Template:Std_Base_navi/cs
- 18.99%    8.355      1 Template:Interface_navi/cs
- 18.99%    8.354      3 Template:Navigation_menu_2
- 13.18%    5.796      1 Template:Userdocnavi/cs
- 12.05%    5.300      2 Template:PropertyData
-  8.01%    3.523      3 Template:Variable
-  5.09%    2.239      1 Template:PropertyView
-  4.56%    2.007     19 Template:KEY
-  4.31%    1.898      1 Template:FALSE
+100.00%   51.626      1 -total
+ 25.29%   13.054      2 Template:PropertyData
+ 20.68%   10.677      1 Template:Std_Base_navi/cs
+ 19.91%   10.278      1 Template:Interface_navi/cs
+ 19.14%    9.883      3 Template:Variable
+ 16.22%    8.375      3 Template:Navigation_menu_2
+  7.65%    3.948      1 Template:Userdocnavi/cs
+  3.85%    1.989      1 Template:PropertyView
+  3.55%    1.832      2 Template:Caption
+  3.24%    1.673     19 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122194413 and revision id 1742653. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122194709 and revision id 1742655. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
