--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -106,8 +106,9 @@
 </p>
 <h3><span class="mw-headline" id="Symbol_oka"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_hidden.png&amp;filetimestamp=20240413200716&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_hidden.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Symbol oka</span></h3>
 <p>To znamen&aacute;, &#382;e objekt bude skryt&yacute; ve stromov&eacute;m zobrazen&iacute;, pokud nen&iacute; za&scaron;krtnuta mo&#382;nost kontextov&eacute;ho menu <b>Zobrazit polo&#382;ky skryt&eacute; ve stromov&eacute;m zobrazen&iacute;</b> objekt&#367; nebo dokumentu. Ovlivn&#283;ny jsou objekty, u kter&yacute;ch je vlastnost <span style="font-size:60%; padding-right:0.8em;">Pohled</span><b>Zobrazit ve stromu</b> nastavena na <code>false</code>. Tuto vlastnost lze zm&#283;nit v <a href="../Property_View.html" title="Property View">Zobrazen&iacute; vlastnost&iacute;</a> nebo pomoc&iacute; kontextov&eacute;ho menu objekt&#367; <b>P&#345;epnout viditelnost ve stromov&eacute;m zobrazen&iacute;</b>.
+</p><p><span id="File:FreeCAD_Tree_view_frozen.png_Cyan_ice_crystal"></span>
 </p>
-<h3><span class="mw-headline" id="Cyan_ice_crystal"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_frozen.png&amp;filetimestamp=20240413201638&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_frozen.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Cyan ice crystal</span></h3>
+<h3><span id="Azurov.C3.BD_ledov.C3.BD_krystal"></span><span class="mw-headline" id="Azurov&yacute;_ledov&yacute;_krystal"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_frozen.png&amp;filetimestamp=20240413201638&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_frozen.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Azurov&yacute; ledov&yacute; krystal</span></h3>
 <p><span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
 </p><p>This indicates a <a href="../Std_ToggleFreeze.html" title="Std ToggleFreeze">frozen</a> object that is not recomputed when its parents change.
 </p>
@@ -175,13 +176,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122194709
+Cached time: 20260122194746
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.108 seconds
-Real time usage: 0.175 seconds
-Preprocessor visited node count: 766/1000000
+CPU time usage: 0.133 seconds
+Real time usage: 0.255 seconds
+Preprocessor visited node count: 767/1000000
 Post&#8208;expand include size: 38047/2097152 bytes
 Template argument size: 12254/2097152 bytes
 Highest expansion depth: 7/100
@@ -191,19 +192,19 @@ Unstrip post&#8208;expand size: 2393/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   51.626      1 -total
- 25.29%   13.054      2 Template:PropertyData
- 20.68%   10.677      1 Template:Std_Base_navi/cs
- 19.91%   10.278      1 Template:Interface_navi/cs
- 19.14%    9.883      3 Template:Variable
- 16.22%    8.375      3 Template:Navigation_menu_2
-  7.65%    3.948      1 Template:Userdocnavi/cs
-  3.85%    1.989      1 Template:PropertyView
-  3.55%    1.832      2 Template:Caption
-  3.24%    1.673     19 Template:KEY
+100.00%   41.718      1 -total
+ 20.46%    8.535      1 Template:Std_Base_navi/cs
+ 17.85%    7.445      3 Template:Navigation_menu_2
+ 12.26%    5.113      1 Template:Interface_navi/cs
+ 10.97%    4.578      1 Template:Userdocnavi/cs
+  9.11%    3.801      2 Template:PropertyData
+  7.87%    3.285      5 Template:Version
+  6.58%    2.743     19 Template:KEY
+  5.82%    2.426      1 Template:PropertyView
+  5.48%    2.288      3 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122194709 and revision id 1742655. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122194746 and revision id 1742657. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
