--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -111,8 +111,9 @@
 <h3><span id="Azurov.C3.BD_ledov.C3.BD_krystal"></span><span class="mw-headline" id="Azurov&yacute;_ledov&yacute;_krystal"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_frozen.png&amp;filetimestamp=20240413201638&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_frozen.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Azurov&yacute; ledov&yacute; krystal</span></h3>
 <p><span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
 </p><p>Ozna&#269;uje <a href="../Std_ToggleFreeze.html" title="Std ToggleFreeze">zmrazen&yacute;</a> objekt, kter&yacute; se p&#345;i zm&#283;n&#283; sv&yacute;ch rodi&#269;&#367; nep&#345;epo&#269;&iacute;t&aacute;v&aacute;.
+</p><p><span id="Preferences"></span>
 </p>
-<h2><span class="mw-headline" id="Preferences">Preferences</span></h2>
+<h2><span id="P.C5.99edvolby"></span><span class="mw-headline" id="P&#345;edvolby">P&#345;edvolby</span></h2>
 <p>See <a href="../Combo_View.html#Preferences" title="Combo View">Combo View</a>.
 </p><p><br>
 </p>
@@ -176,13 +177,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122194819
+Cached time: 20260122194830
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.134 seconds
-Real time usage: 0.186 seconds
-Preprocessor visited node count: 767/1000000
+CPU time usage: 0.129 seconds
+Real time usage: 0.159 seconds
+Preprocessor visited node count: 768/1000000
 Post&#8208;expand include size: 38047/2097152 bytes
 Template argument size: 12254/2097152 bytes
 Highest expansion depth: 7/100
@@ -192,19 +193,19 @@ Unstrip post&#8208;expand size: 2393/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.450      1 -total
- 24.02%   10.195      1 Template:Interface_navi/cs
- 23.12%    9.816      1 Template:Std_Base_navi/cs
- 16.88%    7.164      3 Template:Navigation_menu_2
- 12.60%    5.349      1 Template:Userdocnavi/cs
-  6.87%    2.917      2 Template:PropertyData
-  4.48%    1.902      2 Template:Caption
-  4.47%    1.899      6 Template:MenuCommand
-  4.38%    1.861      3 Template:Variable
-  4.25%    1.803      1 Template:PropertyView
+100.00%   42.393      1 -total
+ 17.46%    7.402      1 Template:Std_Base_navi/cs
+ 16.31%    6.914      2 Template:PropertyData
+ 16.27%    6.897      3 Template:Navigation_menu_2
+ 13.40%    5.681     19 Template:KEY
+ 13.38%    5.672      1 Template:Userdocnavi/cs
+  9.02%    3.822      1 Template:Interface_navi/cs
+  7.96%    3.373      1 Template:PropertyView
+  6.89%    2.919      3 Template:Variable
+  3.76%    1.592      1 Template:FALSE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122194818 and revision id 1742660. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122194830 and revision id 1742662. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
