Created page with "Viz [[Combo_View#Preferences|Kombinované zobrazení]]."

--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -7,7 +7,7 @@
 <li><a href="../pl/Tree_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Widok drzewa (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Tree_View.html" class="mw-pt-progress mw-pt-progress--low" title="Vista em &aacute;rvore (2% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../sv/Tree_View.html" class="mw-pt-progress mw-pt-progress--low" title="Tree View/sv (2% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../bg/Tree_View.html" class="mw-pt-progress mw-pt-progress--high" title="&#1044;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1077;&#1085; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076; (79% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/Tree_View.html" class="mw-pt-progress mw-pt-progress--high" title="&#1044;&#1088;&#1077;&#1074;&#1086; &#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1072; (94% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/Tree_View.html" class="mw-pt-progress mw-pt-progress--high" title="&#12484;&#12522;&#12540;&#12499;&#12517;&#12540; (94% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -114,7 +114,7 @@
 </p><p><span id="Preferences"></span>
 </p>
 <h2><span id="P.C5.99edvolby"></span><span class="mw-headline" id="P&#345;edvolby">P&#345;edvolby</span></h2>
-<p>See <a href="../Combo_View.html#Preferences" title="Combo View">Combo View</a>.
+<p>Viz <a href="../Combo_View.html#Preferences" title="Combo View">Kombinovan&eacute; zobrazen&iacute;</a>.
 </p><p><br>
 </p>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
@@ -177,35 +177,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122194830
+Cached time: 20260122194904
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.129 seconds
-Real time usage: 0.159 seconds
+CPU time usage: 0.141 seconds
+Real time usage: 0.359 seconds
 Preprocessor visited node count: 768/1000000
 Post&#8208;expand include size: 38047/2097152 bytes
 Template argument size: 12254/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2393/5000000 bytes
+Unstrip post&#8208;expand size: 2397/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.393      1 -total
- 17.46%    7.402      1 Template:Std_Base_navi/cs
- 16.31%    6.914      2 Template:PropertyData
- 16.27%    6.897      3 Template:Navigation_menu_2
- 13.40%    5.681     19 Template:KEY
- 13.38%    5.672      1 Template:Userdocnavi/cs
-  9.02%    3.822      1 Template:Interface_navi/cs
-  7.96%    3.373      1 Template:PropertyView
-  6.89%    2.919      3 Template:Variable
-  3.76%    1.592      1 Template:FALSE
+100.00%   87.453      1 -total
+ 21.17%   18.514      5 Template:Version
+ 17.02%   14.886      1 Template:Std_Base_navi/cs
+ 15.04%   13.154      3 Template:Navigation_menu_2
+ 10.86%    9.501      1 Template:Userdocnavi/cs
+  9.16%    8.010      1 Template:Interface_navi/cs
+  7.30%    6.386      1 Template:TOCright
+  7.07%    6.182      1 Template:PropertyView
+  6.61%    5.783      2 Template:PropertyData
+  6.15%    5.377      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122194830 and revision id 1742662. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122194903 and revision id 1742664. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
