--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -61,7 +61,7 @@ App::PropertyVector
 </p>
 <h2><span id="Z.C3.A1kladn.C3.AD_vlastnosti"></span><span class="mw-headline" id="Z&aacute;kladn&iacute;_vlastnosti">Z&aacute;kladn&iacute; vlastnosti</span></h2>
 <p>R&#367;zn&eacute; objekty mohou m&iacute;t r&#367;zn&eacute; vlastnosti. Mnoho objekt&#367; v&scaron;ak m&aacute; stejn&eacute; vlastnosti, proto&#382;e jsou odvozeny ze stejn&eacute; vnit&#345;n&iacute; t&#345;&iacute;dy.
-</p><p>V&#283;t&scaron;ina geometrick&yacute;ch objekt&#367;, kter&eacute; lze vytvo&#345;it a zobrazit v <a href="../index.php?title=3D_View/cs&amp;action=edit&amp;redlink=1.html" class="new" title="3D View/cs (page does not exist)">3D zobrazen&iacute;</a>, je odvozena od <code>Part::Feature</code>. Z&aacute;kladn&iacute; vlastnosti t&#283;chto objekt&#367; najdete v sekci <a href="../index.php?title=Part_Feature/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Part Feature/cs (page does not exist)">Vlastnosti d&iacute;lu</a>.
+</p><p>V&#283;t&scaron;ina geometrick&yacute;ch objekt&#367;, kter&eacute; lze vytvo&#345;it a zobrazit ve <a href="../3D_View.html" title="3D View">3D pohledu</a>, je odvozena od <code>Part::Feature</code>. Z&aacute;kladn&iacute; vlastnosti t&#283;chto objekt&#367; najdete v sekci <a href="../Part_Feature.html" title="Part Feature">Vlastnosti d&iacute;lu</a>.
 </p><p>V p&#345;&iacute;pad&#283; 2D geometrie je v&#283;t&scaron;ina objekt&#367; odvozena od <code>Part::Part2DObject</code> (kter&yacute; je s&aacute;m odvozen od <code>Part::Feature</code>) co&#382; je z&aacute;klad <a href="../index.php?title=Sketch/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Sketch/cs (page does not exist)">Skic</a> a v&#283;t&scaron;iny <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">N&aacute;vrh&#367; objekt&#367;</a>. Z&aacute;kladn&iacute; vlastnosti t&#283;chto objekt&#367; najdete v sekci <a href="../index.php?title=Part_Part2DObject/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Part Part2DObject/cs (page does not exist)">Part Part2DObject</a>.
 </p><p><span id="Context_menu"></span>
 </p>
@@ -173,12 +173,12 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122195716
+Cached time: 20260122195808
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.115 seconds
-Real time usage: 0.175 seconds
+CPU time usage: 0.126 seconds
+Real time usage: 0.250 seconds
 Preprocessor visited node count: 706/1000000
 Post&#8208;expand include size: 32437/2097152 bytes
 Template argument size: 12580/2097152 bytes
@@ -189,19 +189,19 @@ Unstrip post&#8208;expand size: 3983/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   50.474      1 -total
- 16.73%    8.443      1 Template:Std_Base_navi/cs
- 13.20%    6.661      1 Template:Interface_navi/cs
- 12.96%    6.542      3 Template:Navigation_menu_2
-  9.93%    5.011      1 Template:Userdocnavi/cs
-  8.35%    4.216      1 Template:PropertyData
-  7.25%    3.660      2 Template:Docnav
-  6.88%    3.475      2 Template:Value
-  6.60%    3.330      6 Template:Incode
-  6.28%    3.171      1 Template:Code
+100.00%   64.626      1 -total
+ 25.26%   16.324      1 Template:Std_Base_navi/cs
+ 22.17%   14.330      3 Template:Navigation_menu_2
+ 12.94%    8.365      1 Template:Interface_navi/cs
+ 10.70%    6.916      1 Template:Userdocnavi/cs
+ 10.55%    6.817      1 Template:PropertyData
+  6.34%    4.096      1 Template:Variable
+  5.33%    3.442      1 Template:Code
+  4.32%    2.793      2 Template:Docnav
+  4.29%    2.771      3 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122195715 and revision id 1742666. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122195808 and revision id 1742668. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
