--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -70,7 +70,7 @@ App::PropertyVector
 </p><p>Kliknut&iacute;m prav&yacute;m tla&#269;&iacute;tkem my&scaron;i na pozad&iacute; se zobraz&iacute; t&#345;i mo&#382;nosti:
 </p>
 <ul><li><b>P&#345;idat vlastnost</b>: p&#345;id&aacute; k objektu dynamickou vlastnost.</li></ul>
-<ul><li><b>Expand/Collapse Properties</b>: <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul>
+<ul><li><b>Expand/Sbalit vlastnosti</b>: <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul>
 <dl><dd>Property groups collapse/expand when you click their name. Property nodes collapse/expand when you click the symbol (usually an arrow) in front of their name.</dd></dl>
 <dl><dd><ul><li><b>Expand to Default</b>: property groups are expanded and property nodes are collapsed for the current object.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Expand All</b>: property groups and property nodes are expanded for the current object.</li></ul></dd></dl>
@@ -173,15 +173,15 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122200146
+Cached time: 20260122200213
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.112 seconds
-Real time usage: 0.188 seconds
+CPU time usage: 0.141 seconds
+Real time usage: 0.638 seconds
 Preprocessor visited node count: 706/1000000
-Post&#8208;expand include size: 32442/2097152 bytes
-Template argument size: 12585/2097152 bytes
+Post&#8208;expand include size: 32440/2097152 bytes
+Template argument size: 12583/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -189,19 +189,19 @@ Unstrip post&#8208;expand size: 3983/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   58.390      1 -total
- 26.52%   15.483      1 Template:Std_Base_navi/cs
- 18.56%   10.837      1 Template:Interface_navi/cs
- 13.92%    8.128      3 Template:Navigation_menu_2
- 12.09%    7.062      1 Template:Userdocnavi/cs
-  7.47%    4.363      1 Template:PropertyData
-  4.81%    2.807      2 Template:Docnav
-  4.51%    2.631      2 Template:Value
-  4.19%    2.446      1 Template:Code
-  3.79%    2.210      1 Template:TOCright
+100.00%  112.957      1 -total
+ 16.05%   18.133      1 Template:Std_Base_navi/cs
+ 14.53%   16.410      3 Template:Navigation_menu_2
+ 12.06%   13.619      1 Template:Interface_navi/cs
+ 10.79%   12.189      6 Template:Incode
+  9.59%   10.829      1 Template:PropertyData
+  7.63%    8.624      1 Template:Userdocnavi/cs
+  6.97%    7.878      1 Template:Code
+  6.53%    7.373      2 Template:Value
+  5.68%    6.411      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122200146 and revision id 1742672. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122200212 and revision id 1742674. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
