Created page with ": Skupiny vlastností se sbalí/rozbalí po kliknutí na jejich název. Uzly vlastností se sbalí/rozbalí po kliknutí na symbol (obvykle šipku) před jejich názvem."

--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -71,7 +71,7 @@ App::PropertyVector
 </p>
 <ul><li><b>P&#345;idat vlastnost</b>: p&#345;id&aacute; k objektu dynamickou vlastnost.</li></ul>
 <ul><li><b>Expand/Sbalit vlastnosti</b>: <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul>
-<dl><dd>Property groups collapse/expand when you click their name. Property nodes collapse/expand when you click the symbol (usually an arrow) in front of their name.</dd></dl>
+<dl><dd>Skupiny vlastnost&iacute; se sbal&iacute;/rozbal&iacute; po kliknut&iacute; na jejich n&aacute;zev. Uzly vlastnost&iacute; se sbal&iacute;/rozbal&iacute; po kliknut&iacute; na symbol (obvykle &scaron;ipku) p&#345;ed jejich n&aacute;zvem.</dd></dl>
 <dl><dd><ul><li><b>Expand to Default</b>: property groups are expanded and property nodes are collapsed for the current object.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Expand All</b>: property groups and property nodes are expanded for the current object.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Collapse All</b>: property groups and property nodes are collapsed for the current object.</li></ul></dd></dl>
@@ -173,12 +173,12 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122200213
+Cached time: 20260122200247
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.141 seconds
-Real time usage: 0.638 seconds
+CPU time usage: 0.108 seconds
+Real time usage: 0.216 seconds
 Preprocessor visited node count: 706/1000000
 Post&#8208;expand include size: 32440/2097152 bytes
 Template argument size: 12583/2097152 bytes
@@ -189,19 +189,19 @@ Unstrip post&#8208;expand size: 3983/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  112.957      1 -total
- 16.05%   18.133      1 Template:Std_Base_navi/cs
- 14.53%   16.410      3 Template:Navigation_menu_2
- 12.06%   13.619      1 Template:Interface_navi/cs
- 10.79%   12.189      6 Template:Incode
-  9.59%   10.829      1 Template:PropertyData
-  7.63%    8.624      1 Template:Userdocnavi/cs
-  6.97%    7.878      1 Template:Code
-  6.53%    7.373      2 Template:Value
-  5.68%    6.411      1 Template:TOCright
+100.00%   62.337      1 -total
+ 23.67%   14.753      1 Template:Std_Base_navi/cs
+ 17.40%   10.844      1 Template:Interface_navi/cs
+ 15.67%    9.768      3 Template:Navigation_menu_2
+  8.46%    5.274      1 Template:PropertyData
+  8.07%    5.028      1 Template:Userdocnavi/cs
+  7.44%    4.640      1 Template:Code
+  4.99%    3.113      2 Template:Value
+  4.97%    3.095      2 Template:Docnav
+  4.09%    2.549     26 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122200212 and revision id 1742674. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122200247 and revision id 1742676. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
