--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -72,7 +72,7 @@ App::PropertyVector
 <ul><li><b>P&#345;idat vlastnost</b>: p&#345;id&aacute; k objektu dynamickou vlastnost.</li></ul>
 <ul><li><b>Expand/Sbalit vlastnosti</b>: <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul>
 <dl><dd>Skupiny vlastnost&iacute; se sbal&iacute;/rozbal&iacute; po kliknut&iacute; na jejich n&aacute;zev. Uzly vlastnost&iacute; se sbal&iacute;/rozbal&iacute; po kliknut&iacute; na symbol (obvykle &scaron;ipku) p&#345;ed jejich n&aacute;zvem.</dd></dl>
-<dl><dd><ul><li><b>Expand to Default</b>: property groups are expanded and property nodes are collapsed for the current object.</li></ul></dd></dl>
+<dl><dd><ul><li><b>Rozbalit na v&yacute;choz&iacute;</b>: skupiny vlastnost&iacute; pro aktu&aacute;ln&iacute; objekt jsou rozbaleny a uzly vlastnost&iacute; jsou sbaleny.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Expand All</b>: property groups and property nodes are expanded for the current object.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Collapse All</b>: property groups and property nodes are collapsed for the current object.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Default Expand</b>: when an objects is selected, property groups appear expanded and property nodes appear collapsed.</li></ul></dd></dl>
@@ -173,15 +173,15 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122200247
+Cached time: 20260122200549
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.108 seconds
-Real time usage: 0.216 seconds
+CPU time usage: 0.122 seconds
+Real time usage: 0.362 seconds
 Preprocessor visited node count: 706/1000000
-Post&#8208;expand include size: 32440/2097152 bytes
-Template argument size: 12583/2097152 bytes
+Post&#8208;expand include size: 32444/2097152 bytes
+Template argument size: 12587/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -189,19 +189,19 @@ Unstrip post&#8208;expand size: 3983/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   62.337      1 -total
- 23.67%   14.753      1 Template:Std_Base_navi/cs
- 17.40%   10.844      1 Template:Interface_navi/cs
- 15.67%    9.768      3 Template:Navigation_menu_2
-  8.46%    5.274      1 Template:PropertyData
-  8.07%    5.028      1 Template:Userdocnavi/cs
-  7.44%    4.640      1 Template:Code
-  4.99%    3.113      2 Template:Value
-  4.97%    3.095      2 Template:Docnav
-  4.09%    2.549     26 Template:MenuCommand
+100.00%   72.846      1 -total
+ 32.60%   23.750      1 Template:Std_Base_navi/cs
+ 30.86%   22.482      3 Template:Navigation_menu_2
+ 17.81%   12.973      1 Template:Userdocnavi/cs
+ 12.68%    9.235      1 Template:Interface_navi/cs
+  5.45%    3.968     26 Template:MenuCommand
+  5.24%    3.819      1 Template:PropertyData
+  4.17%    3.036      2 Template:Docnav
+  3.09%    2.253      2 Template:Value
+  3.04%    2.218      3 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122200247 and revision id 1742676. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122200549 and revision id 1742678. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
