--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -73,7 +73,7 @@ App::PropertyVector
 <ul><li><b>Expand/Sbalit vlastnosti</b>: <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul>
 <dl><dd>Skupiny vlastnost&iacute; se sbal&iacute;/rozbal&iacute; po kliknut&iacute; na jejich n&aacute;zev. Uzly vlastnost&iacute; se sbal&iacute;/rozbal&iacute; po kliknut&iacute; na symbol (obvykle &scaron;ipku) p&#345;ed jejich n&aacute;zvem.</dd></dl>
 <dl><dd><ul><li><b>Rozbalit na v&yacute;choz&iacute;</b>: skupiny vlastnost&iacute; pro aktu&aacute;ln&iacute; objekt jsou rozbaleny a uzly vlastnost&iacute; jsou sbaleny.</li></ul></dd></dl>
-<dl><dd><ul><li><b>Expand All</b>: property groups and property nodes are expanded for the current object.</li></ul></dd></dl>
+<dl><dd><ul><li><b>Rozbalit v&scaron;e</b>: skupiny vlastnost&iacute; a uzly vlastnost&iacute; pro aktu&aacute;ln&iacute; objekt jsou rozbaleny.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Collapse All</b>: property groups and property nodes are collapsed for the current object.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Default Expand</b>: when an objects is selected, property groups appear expanded and property nodes appear collapsed.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Auto Expand</b>: when an objects is selected, property groups and property nodes appear expanded.</li></ul></dd></dl>
@@ -173,15 +173,15 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122200549
+Cached time: 20260122200656
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.122 seconds
-Real time usage: 0.362 seconds
+Real time usage: 0.198 seconds
 Preprocessor visited node count: 706/1000000
-Post&#8208;expand include size: 32444/2097152 bytes
-Template argument size: 12587/2097152 bytes
+Post&#8208;expand include size: 32447/2097152 bytes
+Template argument size: 12590/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -189,19 +189,19 @@ Unstrip post&#8208;expand size: 3983/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   72.846      1 -total
- 32.60%   23.750      1 Template:Std_Base_navi/cs
- 30.86%   22.482      3 Template:Navigation_menu_2
- 17.81%   12.973      1 Template:Userdocnavi/cs
- 12.68%    9.235      1 Template:Interface_navi/cs
-  5.45%    3.968     26 Template:MenuCommand
-  5.24%    3.819      1 Template:PropertyData
-  4.17%    3.036      2 Template:Docnav
-  3.09%    2.253      2 Template:Value
-  3.04%    2.218      3 Template:Version
+100.00%   50.731      1 -total
+ 24.00%   12.174      1 Template:Std_Base_navi/cs
+ 16.05%    8.144      3 Template:Navigation_menu_2
+ 14.66%    7.438      1 Template:Interface_navi/cs
+ 10.84%    5.501      2 Template:Docnav
+ 10.02%    5.084      1 Template:Userdocnavi/cs
+  7.71%    3.914      1 Template:PropertyData
+  6.05%    3.067      1 Template:Caption
+  4.46%    2.264      1 Template:Variable
+  3.89%    1.975      6 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122200549 and revision id 1742678. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122200656 and revision id 1742680. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
