--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -76,7 +76,7 @@ App::PropertyVector
 <dl><dd><ul><li><b>Rozbalit v&scaron;e</b>: skupiny vlastnost&iacute; a uzly vlastnost&iacute; pro aktu&aacute;ln&iacute; objekt jsou rozbaleny.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Sbalit v&scaron;e</b>: skupiny vlastnost&iacute; a uzly vlastnost&iacute; pro aktu&aacute;ln&iacute; objekt jsou sbaleny.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Rozbalit aktu&aacute;ln&iacute;</b>: kdy&#382; je objekt vybr&aacute;n, skupiny vlastnost&iacute; se zobraz&iacute; rozbalen&eacute; a uzly vlastnost&iacute; se zobraz&iacute; sbalen&eacute;.</li></ul></dd></dl>
-<dl><dd><ul><li><b>Auto Expand</b>: when an objects is selected, property groups and property nodes appear expanded.</li></ul></dd></dl>
+<dl><dd><ul><li><b>Rozbalit automaticky</b>: kdy&#382; je objekt vybr&aacute;n, skupiny vlastnost&iacute; a uzly vlastnost&iacute; se zobraz&iacute; rozbalen&eacute;.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Auto Collapse</b>: when an objects is selected, property groups and property nodes appear collapsed.</li></ul></dd></dl>
 <ul><li><b>Show Hidden</b>: if active, hidden Data and View properties are shown.</li></ul>
 <p>When right-clicking a property the following additional options are available:
@@ -173,15 +173,15 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122200925
+Cached time: 20260122201008
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.127 seconds
-Real time usage: 0.248 seconds
+CPU time usage: 0.135 seconds
+Real time usage: 0.308 seconds
 Preprocessor visited node count: 706/1000000
-Post&#8208;expand include size: 32451/2097152 bytes
-Template argument size: 12594/2097152 bytes
+Post&#8208;expand include size: 32460/2097152 bytes
+Template argument size: 12603/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -189,19 +189,19 @@ Unstrip post&#8208;expand size: 3983/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   71.809      1 -total
- 23.73%   17.041      1 Template:Std_Base_navi/cs
- 17.75%   12.748      3 Template:Navigation_menu_2
- 14.89%   10.691      1 Template:Interface_navi/cs
- 10.64%    7.643      1 Template:PropertyData
-  7.91%    5.679      1 Template:Caption
-  6.99%    5.022      1 Template:Userdocnavi/cs
-  5.89%    4.229      2 Template:Value
-  5.87%    4.215      2 Template:Docnav
-  5.43%    3.896      1 Template:Code
+100.00%   95.503      1 -total
+ 15.92%   15.204      1 Template:TOCright
+ 13.55%   12.942      1 Template:Interface_navi/cs
+ 13.17%   12.574      1 Template:Std_Base_navi/cs
+ 12.19%   11.640      3 Template:Navigation_menu_2
+  8.76%    8.367      1 Template:Userdocnavi/cs
+  6.21%    5.932      2 Template:Value
+  6.09%    5.812      1 Template:PropertyData
+  5.39%    5.151      1 Template:Code
+  4.92%    4.703      6 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122200924 and revision id 1742684. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122201008 and revision id 1742686. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
