--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -77,7 +77,7 @@ App::PropertyVector
 <dl><dd><ul><li><b>Sbalit v&scaron;e</b>: skupiny vlastnost&iacute; a uzly vlastnost&iacute; pro aktu&aacute;ln&iacute; objekt jsou sbaleny.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Rozbalit aktu&aacute;ln&iacute;</b>: kdy&#382; je objekt vybr&aacute;n, skupiny vlastnost&iacute; se zobraz&iacute; rozbalen&eacute; a uzly vlastnost&iacute; se zobraz&iacute; sbalen&eacute;.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Rozbalit automaticky</b>: kdy&#382; je objekt vybr&aacute;n, skupiny vlastnost&iacute; a uzly vlastnost&iacute; se zobraz&iacute; rozbalen&eacute;.</li></ul></dd></dl>
-<dl><dd><ul><li><b>Auto Collapse</b>: when an objects is selected, property groups and property nodes appear collapsed.</li></ul></dd></dl>
+<dl><dd><ul><li><b>Automaticky sbalit</b>: kdy&#382; je objekt vybr&aacute;n, skupiny vlastnost&iacute; a uzly vlastnost&iacute; se zobraz&iacute; sbalen&eacute;.</li></ul></dd></dl>
 <ul><li><b>Show Hidden</b>: if active, hidden Data and View properties are shown.</li></ul>
 <p>When right-clicking a property the following additional options are available:
 </p>
@@ -173,15 +173,15 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122201008
+Cached time: 20260122201055
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.135 seconds
-Real time usage: 0.308 seconds
+CPU time usage: 0.096 seconds
+Real time usage: 0.155 seconds
 Preprocessor visited node count: 706/1000000
-Post&#8208;expand include size: 32460/2097152 bytes
-Template argument size: 12603/2097152 bytes
+Post&#8208;expand include size: 32465/2097152 bytes
+Template argument size: 12608/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -189,19 +189,19 @@ Unstrip post&#8208;expand size: 3983/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   95.503      1 -total
- 15.92%   15.204      1 Template:TOCright
- 13.55%   12.942      1 Template:Interface_navi/cs
- 13.17%   12.574      1 Template:Std_Base_navi/cs
- 12.19%   11.640      3 Template:Navigation_menu_2
-  8.76%    8.367      1 Template:Userdocnavi/cs
-  6.21%    5.932      2 Template:Value
-  6.09%    5.812      1 Template:PropertyData
-  5.39%    5.151      1 Template:Code
-  4.92%    4.703      6 Template:Incode
+100.00%   43.399      1 -total
+ 20.99%    9.110      1 Template:Std_Base_navi/cs
+ 14.11%    6.122      3 Template:Navigation_menu_2
+ 13.81%    5.995      1 Template:Userdocnavi/cs
+ 12.98%    5.634      1 Template:Interface_navi/cs
+  9.17%    3.978      1 Template:PropertyData
+  6.15%    2.669      2 Template:Value
+  5.13%    2.228      2 Template:Docnav
+  5.13%    2.226      1 Template:Code
+  4.74%    2.055      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122201008 and revision id 1742686. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122201055 and revision id 1742688. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
