Created page with "Po kliknutí pravým tlačítkem myši na vlastnost se zobrazí následující další možnosti:"

--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -79,7 +79,7 @@ App::PropertyVector
 <dl><dd><ul><li><b>Rozbalit automaticky</b>: kdy&#382; je objekt vybr&aacute;n, skupiny vlastnost&iacute; a uzly vlastnost&iacute; se zobraz&iacute; rozbalen&eacute;.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Automaticky sbalit</b>: kdy&#382; je objekt vybr&aacute;n, skupiny vlastnost&iacute; a uzly vlastnost&iacute; se zobraz&iacute; sbalen&eacute;.</li></ul></dd></dl>
 <ul><li><b>Zobrazit skryt&eacute;</b>: pokud je aktivn&iacute;, zobraz&iacute; se skryt&eacute; vlastnosti Data a Pohled.</li></ul>
-<p>When right-clicking a property the following additional options are available:
+<p>Po kliknut&iacute; prav&yacute;m tla&#269;&iacute;tkem my&scaron;i na vlastnost se zobraz&iacute; n&aacute;sleduj&iacute;c&iacute; dal&scaron;&iacute; mo&#382;nosti:
 </p>
 <ul><li><b>Copy</b>: copies the property value to the clipboard.</li></ul>
 <ul><li><b>Rename Property Group</b>: renames the property group of selected properties. Only available for dynamic properties. Dynamic properties are those added by the user.</li></ul>
@@ -173,12 +173,12 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122201157
+Cached time: 20260122201242
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.112 seconds
-Real time usage: 0.415 seconds
+CPU time usage: 0.146 seconds
+Real time usage: 0.236 seconds
 Preprocessor visited node count: 706/1000000
 Post&#8208;expand include size: 32470/2097152 bytes
 Template argument size: 12613/2097152 bytes
@@ -189,19 +189,19 @@ Unstrip post&#8208;expand size: 3983/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  108.176      1 -total
- 26.04%   28.171      1 Template:Std_Base_navi/cs
- 20.10%   21.744      3 Template:Navigation_menu_2
- 10.89%   11.777      1 Template:Interface_navi/cs
-  9.59%   10.370      1 Template:PropertyData
-  9.48%   10.259      1 Template:Userdocnavi/cs
-  6.68%    7.229     26 Template:MenuCommand
-  6.00%    6.489      2 Template:Docnav
-  4.37%    4.732      1 Template:Variable
-  4.24%    4.588      1 Template:Code
+100.00%   73.758      1 -total
+ 13.78%   10.162      1 Template:Std_Base_navi/cs
+ 12.72%    9.383      1 Template:Userdocnavi/cs
+ 11.65%    8.594      1 Template:Interface_navi/cs
+ 10.67%    7.871      2 Template:Value
+  9.47%    6.986      3 Template:Navigation_menu_2
+  8.04%    5.930      2 Template:Docnav
+  7.73%    5.700      1 Template:PropertyData
+  7.31%    5.391      1 Template:Code
+  5.35%    3.949     26 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122201157 and revision id 1742690. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122201242 and revision id 1742692. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
