Created page with ": Pokud je za hodnotou stavu hvězdička ({{MenuCommand|*}}), je statická a nelze ji změnit."

--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -88,7 +88,7 @@ App::PropertyVector
 <ul><li><b>Odstranit vlastnost</b>: odstran&iacute; vybran&eacute; vlastnosti. Idem.</li></ul>
 <ul><li><b>V&yacute;raz</b>: otev&#345;e Editor v&yacute;raz&#367;, kter&yacute; umo&#382;&#328;uje pou&#382;&iacute;vat <a href="../Expressions.html" title="Expressions">v&yacute;razy</a> v hodnot&#283; vlastnosti.</li></ul>
 <ul><li><b>Status</b>:</li></ul>
-<dl><dd>If a status value is followed by an asterisk (<b>*</b>) it is static and cannot be changed.</dd></dl>
+<dl><dd>Pokud je za hodnotou stavu hv&#283;zdi&#269;ka (<b>*</b>), je statick&aacute; a nelze ji zm&#283;nit.</dd></dl>
 <dl><dd><ul><li><b>Hidden</b>: if active, sets the property as hidden, meaning that it will only be displayed in the Property View if <b>Show Hidden</b> is active.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Output</b>: if active, sets the property as output.</li></ul></dd></dl>
 <dl><dd><ul><li><b>NoRecompute</b>: if active, modifying the property doesn't touch its container for recompute.</li></ul></dd></dl>
@@ -173,12 +173,12 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122201752
+Cached time: 20260122201833
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.126 seconds
-Real time usage: 0.443 seconds
+CPU time usage: 0.101 seconds
+Real time usage: 0.177 seconds
 Preprocessor visited node count: 706/1000000
 Post&#8208;expand include size: 32504/2097152 bytes
 Template argument size: 12647/2097152 bytes
@@ -189,19 +189,19 @@ Unstrip post&#8208;expand size: 3984/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  193.210      1 -total
- 21.02%   40.615      3 Template:Navigation_menu_2
- 20.92%   40.425      1 Template:Interface_navi/cs
- 19.71%   38.076      1 Template:Std_Base_navi/cs
- 10.56%   20.403      2 Template:Docnav
- 10.41%   20.116      1 Template:PropertyData
-  8.71%   16.826      1 Template:Caption
-  6.02%   11.629      6 Template:Incode
-  5.71%   11.024      1 Template:Userdocnavi/cs
-  4.98%    9.623      1 Template:Variable
+100.00%   43.279      1 -total
+ 17.36%    7.513      1 Template:Std_Base_navi/cs
+ 14.10%    6.104      3 Template:Navigation_menu_2
+ 13.34%    5.773      1 Template:Code
+ 11.10%    4.805      1 Template:Interface_navi/cs
+  9.67%    4.185      1 Template:Userdocnavi/cs
+  6.85%    2.965      1 Template:PropertyData
+  5.92%    2.561     26 Template:MenuCommand
+  5.87%    2.541      6 Template:Incode
+  5.74%    2.484      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122201752 and revision id 1742704. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122201833 and revision id 1742707. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
