Created page with ":* {{MenuCommand|Výstup}}: pokud je aktivní, nastaví vlastnost jako výstup."

--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -90,7 +90,7 @@ App::PropertyVector
 <ul><li><b>Status</b>:</li></ul>
 <dl><dd>Pokud je za hodnotou stavu hv&#283;zdi&#269;ka (<b>*</b>), je statick&aacute; a nelze ji zm&#283;nit.</dd></dl>
 <dl><dd><ul><li><b>Skryt&aacute;</b>: pokud je aktivn&iacute;, nastav&iacute; vlastnost jako skrytou, co&#382; znamen&aacute;, &#382;e se zobraz&iacute; v okn&#283; Vlastnosti pouze v p&#345;&iacute;pad&#283;, &#382;e je aktivn&iacute; p&#345;&iacute;kaz <b>Zobrazit skryt&eacute;</b>.</li></ul></dd></dl>
-<dl><dd><ul><li><b>Output</b>: if active, sets the property as output.</li></ul></dd></dl>
+<dl><dd><ul><li><b>V&yacute;stup</b>: pokud je aktivn&iacute;, nastav&iacute; vlastnost jako v&yacute;stup.</li></ul></dd></dl>
 <dl><dd><ul><li><b>NoRecompute</b>: if active, modifying the property doesn't touch its container for recompute.</li></ul></dd></dl>
 <dl><dd><ul><li><b>ReadOnly</b>: if active, sets the property as read-only. The property won't be editable in the Property View. It may however still be possible to change the property via a dialog.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Transient</b>: if active, sets the property as transient. The value of a transient property is not saved to file. When opening a file, it is instantiated with its default value.</li></ul></dd></dl>
@@ -173,15 +173,15 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122201930
+Cached time: 20260122201959
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.122 seconds
-Real time usage: 0.332 seconds
+CPU time usage: 0.116 seconds
+Real time usage: 0.194 seconds
 Preprocessor visited node count: 706/1000000
-Post&#8208;expand include size: 32510/2097152 bytes
-Template argument size: 12653/2097152 bytes
+Post&#8208;expand include size: 32511/2097152 bytes
+Template argument size: 12654/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -189,19 +189,19 @@ Unstrip post&#8208;expand size: 3984/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   82.225      1 -total
- 18.47%   15.183      1 Template:Std_Base_navi/cs
- 11.09%    9.121      1 Template:TRUE
- 10.73%    8.819      1 Template:Userdocnavi/cs
- 10.01%    8.234      1 Template:PropertyData
-  9.65%    7.935      2 Template:Value
-  8.84%    7.270      1 Template:Code
-  8.84%    7.268      3 Template:Navigation_menu_2
-  8.75%    7.191      1 Template:Interface_navi/cs
-  6.81%    5.598      1 Template:Variable
+100.00%   50.078      1 -total
+ 17.56%    8.792      1 Template:Std_Base_navi/cs
+ 13.75%    6.886      1 Template:Interface_navi/cs
+ 13.64%    6.832      3 Template:Navigation_menu_2
+ 10.51%    5.263      1 Template:Userdocnavi/cs
+  9.96%    4.986      1 Template:PropertyData
+  6.04%    3.023      2 Template:Docnav
+  5.89%    2.950      6 Template:Incode
+  5.16%    2.586      1 Template:TOCright
+  5.05%    2.529      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122201930 and revision id 1742709. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122201959 and revision id 1742711. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
