Updated page Navigation Cube/cs

--- a/wiki/cs/Navigation_Cube.html
+++ b/wiki/cs/Navigation_Cube.html
@@ -49,7 +49,7 @@
 </p><p><span id="Reverse_view_button"></span>
 </p>
 <h3><span id="Tla.C4.8D.C3.ADtko_pro_zp.C4.9Btn.C3.BD_pohled"></span><span class="mw-headline" id="Tla&#269;&iacute;tko_pro_zp&#283;tn&yacute;_pohled">Tla&#269;&iacute;tko pro zp&#283;tn&yacute; pohled</span></h3>
-<p>Kliknut&iacute;m na kulat&eacute; tla&#269;&iacute;tko v prav&eacute;m horn&iacute;m rohu naviga&#269;n&iacute; kostky oto&#269;&iacute;te <a href="../index.php?title=3D_View/cs&amp;action=edit&amp;redlink=1.html" class="new" title="3D View/cs (page does not exist)">3D zobrazen&iacute;</a> o 180 stup&#328;&#367; kolem svisl&eacute; osy zobrazen&iacute;.
+<p>Kliknut&iacute;m na kulat&eacute; tla&#269;&iacute;tko v prav&eacute;m horn&iacute;m rohu naviga&#269;n&iacute; kostky oto&#269;&iacute;te <a href="../3D_View.html" title="3D View">3D zobrazen&iacute;</a> o 180 stup&#328;&#367; kolem svisl&eacute; osy zobrazen&iacute;.
 </p><p><span id="Mini-cube_menu"></span>
 </p>
 <h3><span class="mw-headline" id="Menu_mini-krychle">Menu mini-krychle</span></h3>
@@ -258,12 +258,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122203520
+Cached time: 20260122203537
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.085 seconds
-Real time usage: 0.135 seconds
+CPU time usage: 0.099 seconds
+Real time usage: 0.156 seconds
 Preprocessor visited node count: 408/1000000
 Post&#8208;expand include size: 9449/2097152 bytes
 Template argument size: 3259/2097152 bytes
@@ -274,19 +274,19 @@ Unstrip post&#8208;expand size: 3003/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.842      1 -total
- 33.21%    5.925      1 Template:Userdocnavi/cs
- 21.61%    3.855     14 Template:Value
- 13.69%    2.443      1 Template:Navigation_menu_2
- 10.85%    1.935      2 Template:Docnav
-  8.06%    1.437     15 Template:Incode
-  6.76%    1.205      7 Template:Version
-  6.51%    1.161     13 Template:MenuCommand
-  5.38%    0.960      1 Template:TOCright
-  4.66%    0.832      1 Template:Button
+100.00%   29.580      1 -total
+ 28.49%    8.428      1 Template:Userdocnavi/cs
+ 20.25%    5.991     14 Template:Value
+ 10.84%    3.206      1 Template:Navigation_menu_2
+ 10.42%    3.083      1 Template:Button
+  9.61%    2.844      2 Template:Docnav
+  9.37%    2.770     15 Template:Incode
+  8.24%    2.436     13 Template:MenuCommand
+  7.63%    2.258      1 Template:TOCright
+  7.22%    2.135      7 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410187-0!canonical and timestamp 20260122203520 and revision id 1742731. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410187-0!canonical and timestamp 20260122203537 and revision id 1742733. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
