Updated page Navigation Cube/cs

--- a/wiki/cs/Navigation_Cube.html
+++ b/wiki/cs/Navigation_Cube.html
@@ -10,7 +10,7 @@
 <li><a href="../pt/Navigation_Cube.html" class="mw-pt-progress mw-pt-progress--complete" title="O Cubo de Navega&ccedil;&atilde;o (100% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/Navigation_Cube.html" class="mw-pt-progress mw-pt-progress--low" title="Cubo de Navega&ccedil;&atilde;o (7% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Navigation_Cube.html" class="mw-pt-progress mw-pt-progress--low" title="Cubul de Navigare (2% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Navigation_Cube.html" class="mw-pt-progress mw-pt-progress--med" title="&#1053;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1086;&#1085;&#1085;&#1099;&#1081; &#1050;&#1091;&#1073; (17% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Navigation_Cube.html" class="mw-pt-progress mw-pt-progress--low" title="&#23548;&#33322;&#31435;&#26041; (2% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Navigation_Cube.html" class="mw-pt-progress mw-pt-progress--low" title="&#12490;&#12499;&#12466;&#12540;&#12471;&#12519;&#12531;&#12461;&#12517;&#12540;&#12502; (10% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -53,17 +53,15 @@
 </p><p><span id="Mini-cube_menu"></span>
 </p>
 <h3><span class="mw-headline" id="Menu_mini-krychle">Menu mini-krychle</span></h3>
-<div class="mw-translate-fuzzy">
 <p>Kliknut&iacute;m na malou kostku v prav&eacute;m doln&iacute;m rohu naviga&#269;n&iacute; kostky se zobraz&iacute; menu s n&aacute;sleduj&iacute;c&iacute;mi mo&#382;nostmi:
 </p>
 <ul><li><b><span typeof="mw:File"><a href="../index.php?title=Std_OrthographicCamera.svg&amp;filetimestamp=20240704204344&amp;.html" class="mw-file-description"><img src="../File/Std_OrthographicCamera.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_OrthographicCamera.html" title="Std OrthographicCamera">Ortogon&aacute;ln&iacute; pohled</a></b>: p&#345;epne do ortogon&aacute;ln&iacute;ho pohledu.</li>
 <li><b><span typeof="mw:File"><a href="../index.php?title=Std_PerspectiveCamera.svg&amp;filetimestamp=20240704204419&amp;.html" class="mw-file-description"><img src="../File/Std_PerspectiveCamera.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_PerspectiveCamera.html" title="Std PerspectiveCamera">Perspektivn&iacute; zobrazen&iacute;</a></b>: p&#345;epne do perspektivn&iacute;ho zobrazen&iacute;.</li>
 <li><b><span typeof="mw:File"><a href="../index.php?title=Std_ViewIsometric.svg&amp;filetimestamp=20240704204910&amp;.html" class="mw-file-description"><img src="../File/Std_ViewIsometric.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_ViewIsometric.html" title="Std ViewIsometric">Izometrick&yacute;</a></b>: p&#345;epne do izometrick&eacute;ho zobrazen&iacute;.</li>
-<li>{{MenuCommand|<span typeof="mw:File"><a href="../index.php?title=Std_ViewFitAll.svg&amp;filetimestamp=20240704204734&amp;.html" class="mw-file-description"><img src="../File/Std_ViewFitAll.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_ViewFitAll.html" title="Std ViewFitAll">Zobrazit v&scaron;e</a>: p&#345;ibl&iacute;&#382;&iacute; a posune kameru tak, aby se v&scaron;echny viditeln&eacute; objekty ve&scaron;ly do z&aacute;b&#283;ru.</li>
+<li><b><span typeof="mw:File"><a href="../index.php?title=Std_ViewFitAll.svg&amp;filetimestamp=20240704204734&amp;.html" class="mw-file-description"><img src="../File/Std_ViewFitAll.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_ViewFitAll.html" title="Std ViewFitAll">Zobrazit v&scaron;e</a></b>: p&#345;ibl&iacute;&#382;&iacute; a posune kameru tak, aby se v&scaron;echny viditeln&eacute; objekty ve&scaron;ly do z&aacute;b&#283;ru.</li>
 <li><b><span typeof="mw:File"><a href="../index.php?title=Std_ViewFitSelection.svg&amp;filetimestamp=20240704204801&amp;.html" class="mw-file-description"><img src="../File/Std_ViewFitSelection.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_ViewFitSelection.html" title="Std ViewFitSelection">Zobrazit v&yacute;b&#283;r</a></b>: p&#345;ibl&iacute;&#382;&iacute; a posune kameru tak, aby se v&scaron;echny vybran&eacute; objekty ve&scaron;ly do z&aacute;b&#283;ru. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li>
 <li><b><span typeof="mw:File"><a href="../index.php?title=Std_AlignToSelection.svg&amp;filetimestamp=20240705143347&amp;.html" class="mw-file-description"><img src="../File/Std_AlignToSelection.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_AlignToSelection.html" title="Std AlignToSelection">Zarovnat podle v&yacute;b&#283;ru</a></b>: nasm&#283;ruje kameru v zobrazen&iacute; v opa&#269;n&eacute;m sm&#283;ru ne&#382; je norm&aacute;la rovinn&eacute; plochy nebo v opa&#269;n&eacute;m sm&#283;ru ne&#382; je p&#345;&iacute;m&aacute; hrana. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li>
 <li><b>Pohybliv&aacute; naviga&#269;n&iacute; kostka</b>: pokud je za&scaron;krtnuto toto pol&iacute;&#269;ko (<span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>), lze celou naviga&#269;n&iacute; kostku p&#345;esunout tak, &#382;e podr&#382;&iacute;te lev&eacute; tla&#269;&iacute;tko my&scaron;i kdekoli na hlavn&iacute; kostce a p&#345;et&aacute;hnete ji. To slou&#382;&iacute; k do&#269;asn&eacute;mu p&#345;esunut&iacute; kostky z cesty. Pomoc&iacute; <a href="#Advanced_parameters/cs">pokro&#269;il&yacute;ch parametr&#367;</a> OffsetX a OffsetY lze kostku trvale p&#345;em&iacute;stit, viz  n&iacute;&#382;e.</li></ul>
-</div>
 <p><span id="Customization"></span>
 </p>
 <h2><span id="P.C5.99izp.C5.AFsoben.C3.AD"></span><span class="mw-headline" id="P&#345;izp&#367;soben&iacute;">P&#345;izp&#367;soben&iacute;</span></h2>
@@ -258,35 +256,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122204018
+Cached time: 20260122204349
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.092 seconds
-Real time usage: 0.311 seconds
-Preprocessor visited node count: 408/1000000
-Post&#8208;expand include size: 9434/2097152 bytes
-Template argument size: 3244/2097152 bytes
+CPU time usage: 0.090 seconds
+Real time usage: 0.146 seconds
+Preprocessor visited node count: 412/1000000
+Post&#8208;expand include size: 9506/2097152 bytes
+Template argument size: 3310/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3003/5000000 bytes
+Unstrip post&#8208;expand size: 3007/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   39.597      1 -total
- 26.07%   10.323      1 Template:Userdocnavi/cs
- 20.22%    8.005     14 Template:Value
- 11.56%    4.579      1 Template:Button
- 10.94%    4.333      2 Template:Docnav
- 10.17%    4.026      7 Template:Version
-  8.60%    3.405      1 Template:TOCright
-  7.62%    3.016      1 Template:Navigation_menu_2
-  6.16%    2.439     15 Template:Incode
-  6.13%    2.425     13 Template:MenuCommand
+100.00%   29.437      1 -total
+ 32.41%    9.540      1 Template:Userdocnavi/cs
+ 21.82%    6.424     14 Template:Value
+ 14.31%    4.213      1 Template:Navigation_menu_2
+  9.69%    2.851     15 Template:Incode
+  9.00%    2.651      2 Template:Docnav
+  8.72%    2.568     14 Template:MenuCommand
+  8.26%    2.432      1 Template:Button
+  7.97%    2.345      1 Template:TOCright
+  4.82%    1.420      7 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410187-0!canonical and timestamp 20260122204017 and revision id 1742739. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410187-0!canonical and timestamp 20260122204349 and revision id 1742741. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
